styles.css
/* ... */
@media screen and (min-width: 768px) {
	.mod_solo_report_card.mod_solo_grammar_evaluation .mod_solo_summaryheader {
		font-size: 22px;
		position: static;
	}
}

.mod_solo_report_card.mod_solo_grammar_evaluation .mod_solo_report_card_content {
	padding-top: 96px;
}

@media screen and (min-width: 768px) {
	.mod_solo_report_card.mod_solo_grammar_evaluation .mod_solo_report_card_content {
		padding-top: 36px;
    padding-left: 36px;
    padding-right: 36px;
    display: flex;
    align-items: center;
	}
}

.mod_solo_grammar_evaluation_illustration {
	background: url([[pix:mod_solo|poodll-solo-grammar-illustration]]);
  background-size: 64px 60px;
  background-repeat: no-repeat;
  background-position: center;
	width: 64px; 
	height: 60px;
	margin-top: 36px;
	margin-bottom: 12px;
	position: absolute;
}

@media screen and (min-width: 768px) {
	.mod_solo_grammar_evaluation_illustration {
		background-size: 108px 92px;
		width: 108px; 
		height: 92px;
    position: static;
		margin-top: 0;
	}
}

.mod_solo_grammareval_label {
	text-align: left;
	margin-bottom: 18px;
}

@media screen and (min-width: 768px) {
	.mod_solo_grammareval_label {
		margin-bottom: 24px;
	}
}

.mod_solo_grammarerror {
	margin-top: 24px;
	margin-bottom: 24px;
	background: #FAFBFD;
	border: 1px solid #DCE0E3;
	border-radius: 4px;
	padding: 12px 18px;
}

/* Custom fonts */

@font-face { /* where FontName and fontname represents the name of the font you want to add */
	font-family: 'RobotoMono';
	src: url([[font:mod_solo|RobotoMono-Medium.ttf]]) format('truetype');
	font-weight: 500;
	font-style: normal;
}
.msft_finetune_correction {
	background-color: #fbe8cd;
}

.mod_solo_returntranscriptpage {
	align-self: end;
}
.mod_solo_autogradelog_content {
	font-size: 13px;
	padding: 8px;
}
.mod_solo_result_squaretiles {
	margin: 15px;
	padding: 5px;
	display: flex;
}
.mod_solo_result_squaretile {
	margin: 8px;
	
}
.mod_solo_result_squaretile .card-header {
	background: linear-gradient(85.14deg, #E6E6FE 15.61%, #E2E1FF 71.2%);
	max-width: 200px;
}

.mod_solo_sampleanswereval {
	padding: 5px;
	margin: 5px;
}

.mod_solo_aigradepreview_content {
    border: 1px solid black;
    border-radius: 5px;
    padding: 10px;
}

.solo_ttspassageplayer {
	width: 100%;
	margin-top: 10px;
	margin-bottom: 10px;
	padding: 5px;
	border: 1px solid grey;
}
.solo_ttspassageplayer button.passage-audio-player{
	border: none;
	color: #fff;
	width: 50%;
	height: 30px;
	background-color: green;
	display: block;
	margin-left: auto;
	margin-right: auto;
	margin-bottom: 7px;
}

.solo_ttspassageplayer .passageplayer_activesentence {
	background: #c5efcf;
	/* font-weight: bold; */
}

.mod_solo_rtl {
	direction: rtl;
	text-align: right;
}

.mod_solo_hiddenaudioplayer_cont video {
	width: 100%;
}

